[package]
name = "bokutotu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
num-traits = "0.2.15"
openblas-src = "0.10.5"
cblas = "*"
cublas-sys = {path = "./cublas-sys"}
cuda-runtime-sys = {path = "./cuda-runtime-sys"}
cudnn-sys = {path = "./cudnn-sys"}
